added a cat image

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. </h1>
-<p>Hey. I'm a paragraph element..</p>
-<a href="https://google.com" target="_blank" title="let's go to google">Click me!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Tase page</title>
+</head>
+<body>
+	<h1>Hey. </h1>
+	<p>Hey. I'm a <b>paragraph</b> element..</p>
+	<a href="https://google.com" target="_blank" title="let's go to google">Click me!</a>
+	<p>My name is:<br>
+	ZOTE</p>
+	<img src="file:///C:/Users/Baciunga/Desktop/mejpg.jpg">
+</body>
+</html>
