rezolvat problema cu poza

--- a/test.html
+++ b/test.html
@@ -9,6 +9,6 @@
 	<a href="https://google.com" target="_blank" title="let's go to google">Click me!</a>
 	<p>My name is:<br>
 	ZOTE</p>
-	<img src="file:///C:/Users/Baciunga/Desktop/mejpg.jpg">
+	<img src="mejpg.jpg">
 </body>
 </html>
