Wrote the CSS for Zote

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 -->
 	<link rel="icon" href="mejpg.jpg">
 	<title>Zote the Persona</title>
+	<link rel="stylesheet" type="text/css" href="css/zoteedit.css">
 </head>
 <body>
 	<!-- header element-->
@@ -45,8 +46,7 @@
 	</header>
 	<!-- main element-->
 	<main>
-		<h2></h2>
-		<p>Zote is a traveller from outside Hallownest who came to the Kingdom to fulfill a promise. This is ultimately revealed to be a promise of glory for himself.
+		<h2> Zote is a traveller from outside Hallownest who came to the Kingdom to fulfill a promise. This is ultimately revealed to be a promise of glory for himself. </h2>
 
 He named his nail "Life Ender" because names supposedly have power.Unfortunately, because it is made of shellwood, it cannot deal damage.
 
@@ -63,12 +63,12 @@ He named his nail "Life Ender" because names supposedly have power.Unfortunately
 		<h2>Zote's friends</h2>
 		<p>Himself Click on the links below for more prays</p>
 		<ul>
-			<li><a href="https://hollowknight.fandom.com/wiki/Zote" target="_blank">More of Himself</a></li>
-			<li><a href="https://hollowknight.fandom.com/wiki/Zote" target="_blank">More of Himself</a></li>
-			<li><a href="https://hollowknight.fandom.com/wiki/Zote" target="_blank">More of Himself</a></li>
+			<li><a href="https://hollowknight.fandom.com/wiki/Zote" target="_blank" title="Wiki">More of Himself</a></li>
+			<li><a href="https://hollowknight.fandom.com/wiki/Zote" target="_blank" title="Wiki">More of Himself</a></li>
+			<li><a href="https://hollowknight.fandom.com/wiki/Zote" target="_blank" title="Wiki">More of Himself</a></li>
 		</ul>
 	</main>
-	<!-- main element-->
+	<!-- footer element-->
 	<footer>
 		<p>This site is useless
 		&copy; ye</p>
