backgrounf color si scoatere margini

--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
 	</header>
 	<!-- main element-->
 	<main>
+		<br>
 		<h2> Zote is a traveller from outside Hallownest who came to the Kingdom to fulfill a promise. This is ultimately revealed to be a promise of glory for himself. </h2>
 
 He named his nail "Life Ender" because names supposedly have power.Unfortunately, because it is made of shellwood, it cannot deal damage.
 
 </p>
 		<img src="zote.png">
-		<p>Zote the beauty</p>
+		<p class="under-img-text">Zote the beauty</p>
 		<h2>Zote characteristics</h2>
 		<ol>
 			<li>Invincible, Fearless, Sensual</li>
@@ -67,6 +68,7 @@ He named his nail "Life Ender" because names supposedly have power.Unfortunately
 			<li><a href="https://hollowknight.fandom.com/wiki/Zote" target="_blank" title="Wiki">More of Himself</a></li>
 			<li><a href="https://hollowknight.fandom.com/wiki/Zote" target="_blank" title="Wiki">More of Himself</a></li>
 		</ul>
+		<br>
 	</main>
 	<!-- footer element-->
 	<footer>
